fix: adjust search button position for improved alignment

--- a/src/index.css
+++ b/src/index.css
@@ -508,7 +508,7 @@ p{
   }
   img.search_btn {
     position: absolute;
-    transform: translate(-8rem,3.6rem);
+    transform: translate(-7rem,3.5rem);
     width: auto;
     height: 4vh;
     z-index: 101; 
